--- a/app/src/main/res/drawable/cat_4_background.xml
+++ b/app/src/main/res/drawable/cat_4_background.xml
@@ -3,7 +3,7 @@
 <item>
     <shape android:shape="rectangle">
         <corners android:radius="10dp" />
-        <solid android:color="#5DCC92"/>
+        <solid android:color="#57E299"/>
     </shape>
 </item>
 </selector>
