--- a/app/src/main/res/layout/activity_list_foods.xml
+++ b/app/src/main/res/layout/activity_list_foods.xml
@@ -37,10 +37,10 @@
                     android:id="@+id/titleTxt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Title"
+                    android:text="Daftar Makanan"
+                    android:textColor="@color/blue_grey"
                     android:textSize="24sp"
                     android:textStyle="bold"
-                    android:textColor="@color/blue_grey"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
