--- a/app/src/main/res/layout/viewholder_best_deal.xml
+++ b/app/src/main/res/layout/viewholder_best_deal.xml
@@ -80,7 +80,7 @@
                 android:id="@+id/timeTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="time"
+                android:text="waktu"
                 app:layout_constraintBottom_toBottomOf="@+id/starTxt"
                 app:layout_constraintEnd_toStartOf="@+id/textView15"
                 app:layout_constraintStart_toEndOf="@+id/imageView6"
