--- a/app/src/main/res/layout/viewholder_list_food.xml
+++ b/app/src/main/res/layout/viewholder_list_food.xml
@@ -34,7 +34,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
-                android:text="Title"
+                android:text="Judul Makanan"
                 android:textColor="@color/blue_grey"
                 android:textSize="16sp"
                 android:textStyle="bold"
@@ -47,7 +47,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:text="time"
+                android:text="Waktu"
 
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView3" />
