--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,7 +21,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="48dp"
-                app:srcCompat="@drawable/logo"/>
+                app:srcCompat="@drawable/amanah" />
 
             <LinearLayout
                 android:layout_width="match_parent"
