--- a/app/src/main/res/layout/viewholder_cart.xml
+++ b/app/src/main/res/layout/viewholder_cart.xml
@@ -22,14 +22,15 @@
             android:layout_marginStart="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ayam_pedas" />
 
         <TextView
             android:id="@+id/titleTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:text="Judul Makanan"
+            android:text="Ayam Pedas"
             android:textColor="@color/blue_grey"
             android:textSize="16sp"
             android:textStyle="bold"
@@ -41,9 +42,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="$0"
-            android:textSize="16sp"
+            android:text="$13.000"
             android:textColor="@color/blue_grey"
+            android:textSize="16sp"
             app:layout_constraintStart_toStartOf="@+id/titleTxt"
             app:layout_constraintTop_toBottomOf="@+id/titleTxt" />
 
@@ -52,10 +53,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
-            android:text="$0"
+            android:text="$13.000"
+            android:textColor="@color/red"
             android:textSize="18sp"
             android:textStyle="bold"
-            android:textColor="@color/red"
             app:layout_constraintBottom_toBottomOf="@+id/pic"
             app:layout_constraintEnd_toEndOf="parent" />
 
