--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -26,19 +26,19 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="center"
                 android:layout_marginTop="16dp"
+                android:gravity="center"
                 android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/textView7"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Amanah"
                     android:layout_marginEnd="8dp"
+                    android:text="Amanah"
+                    android:textColor="@color/black"
                     android:textSize="45sp"
-                    android:textStyle="bold"
-                    android:textColor="@color/black"/>
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/textView8"
@@ -46,67 +46,65 @@
                     android:layout_height="wrap_content"
                     android:text="Chicken"
                     android:textColor="@color/blue_grey"
-                    android:textSize="45sp"/>
+                    android:textSize="45sp" />
             </LinearLayout>
 
             <EditText
                 android:id="@+id/userEdit"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
+                android:layout_marginStart="32dp"
                 android:layout_marginTop="32dp"
                 android:layout_marginEnd="32dp"
-                android:layout_marginStart="32dp"
+                android:background="@drawable/edittext_background"
+                android:ems="10"
                 android:hint="Email address"
+                android:inputType="text"
                 android:textAlignment="center"
                 android:textColorHint="@color/blue_grey"
-                android:textSize="16sp"
-                android:ems="10"
-                android:background="@drawable/edittext_background"
-                android:inputType="text"
-                />
+                android:textSize="16sp" />
 
             <EditText
                 android:id="@+id/passEdit"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
+                android:layout_marginStart="32dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="32dp"
-                android:layout_marginStart="32dp"
+                android:background="@drawable/edittext_background"
+                android:ems="10"
                 android:hint="Password"
+                android:inputType="textPassword"
                 android:textAlignment="center"
                 android:textColorHint="@color/blue_grey"
-                android:textSize="16sp"
-                android:ems="10"
-                android:background="@drawable/edittext_background"
-                android:inputType="textPassword"
-                />
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/textView9"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Lupa Password ?"
-                android:textSize="16sp"
                 android:layout_marginTop="32dp"
-                android:textAlignment="center"/>
+                android:text="Lupa Password ?"
+                android:textAlignment="center"
+                android:textSize="16sp" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/loginBtn"
+                style="@android:style/Widget.Button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Login"
-                android:background="@drawable/red_button_background"
                 android:layout_margin="32dp"
-                style="@android:style/Widget.Button"
+                android:background="@drawable/red_button_background"
+                android:text="Login"
                 android:textColor="@color/white"
                 android:textSize="16sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginEnd="32dp"
                 android:layout_marginStart="32dp"
+                android:layout_marginEnd="32dp"
                 android:orientation="horizontal">
 
                 <View
@@ -173,16 +171,16 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Apakah anda belum punya akun?"
-                    android:textSize="16sp"
-                    android:textColor="@color/blue_grey"/>
+                    android:textColor="@color/blue_grey"
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/daftarBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Daftar"
-                    android:textSize="16sp"
-                    android:textColor="@color/red"/>
+                    android:textColor="@color/red"
+                    android:textSize="16sp" />
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
